update deps and styles

--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
     }
   ],
   "browserslist": [
-    "last 2 versions",
-    "android 4",
-    "opera 12"
+    "last 2 chrome versions"
   ],
   "scripts": {
     "build": "webpack --progress --config resources/assets/build/webpack.config.js",
