--- a/resources/assets/config.json
+++ b/resources/assets/config.json
@@ -9,7 +9,7 @@
     ]
   },
   "publicPath": "/wp-content/themes/starter-sage",
-  "devUrl": "https://roots.dickey.local",
+  "devUrl": "https://sage.dickey.local",
   "proxyUrl": "http://localhost:3000",
   "cacheBusting": "[name]_[hash:8]",
   "watch": [
