--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "roots/sage",
+  "name": "8bit-echo/sage-vite",
   "type": "wordpress-theme",
   "license": "MIT",
-  "description": "WordPress starter theme with a modern development workflow",
+  "description": "WordPress starter theme with Vite workflow",
   "homepage": "https://roots.io/sage/",
   "authors": [
     {
@@ -19,11 +19,16 @@
       "name": "QWp6t",
       "email": "hi@qwp6t.me",
       "homepage": "https://github.com/qwp6t"
+    },
+    {
+      "name": "Matt Dickey",
+      "email": "mdickey46@gmail.com",
+      "homepage": "https://github.com/8bit-echo"
     }
   ],
-  "keywords": ["wordpress"],
+  "keywords": ["wordpress", "sage", "vite"],
   "support": {
-    "issues": "https://github.com/roots/sage/issues",
+    "issues": "https://github.com/8bit-echo/sage-starter/issues",
     "forum": "https://discourse.roots.io/"
   },
   "autoload": {
@@ -33,10 +38,12 @@
   },
   "require": {
     "php": ">=7.1",
-    "composer/installers": "~1.9",
+    "composer/installers": "~1.0",
     "illuminate/support": "5.6.*",
     "roots/sage-lib": "~9.0.9",
-    "soberwp/controller": "~2.1.0"
+    "soberwp/controller": "~2.1.0",
+    "vlucas/phpdotenv": "^5.3",
+    "oscarotero/env": "^2.1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.8.0",
